2009-01-26  Claudio Saavedra  <csaavedra@igalia.com>

	Merged from trunk:

	* gtk/gtktreeview.c: (gtk_tree_view_class_init): Slightly
	improve ::search-column property description.

2009-01-21  Cody Russell  <bratsche@gnome.org>

	Bug 568592 – GailTextCell no longer implements AtkAction interface

	* modules/other/gail/gailtextcell.c: Fix a regression in GailTextCell
	from revision 19227 where G_DEFINE_TYPE_WITH_CODE was used to replace
	hard-coded type definition but accidentally removed the registration
	of the AtkAction interface. Patch from Peter Johanson.
	
2009-01-16  Cody Russell  <bratsche@gnome.org>

        Bug 567944 – [Win32] Sorted treeview columns can be unreadable

        * modules/engines/ms-windows/msw_style.c: Draw selected treeview
        cells according to treeview focus, but ignore whether it is in
        a sorted column or not.  Otherwise the intersection of a selected
        row and a sorted column looks very strange if the treeview does
        not have focus.

2009-01-12  Tor Lillqvist  <tml@iki.fi>

	Bug 164002 - query scripts don't work uninstalled on windows

	* gtk/gtkmain.c (_gtk_get_libdir): If the gtk DLL is in a ".libs"
	folder, assume we are running uninstalled, and use the
	configure-time GTK_LIBDIR.

2009-01-12  Tor Lillqvist  <tml@iki.fi>

	* gdk/gdk.c (gdk_arg_debug_cb) (gdk_arg_no_debug_cb): A
	GOptionArgFunc should return gboolean and take also a GError
	pointer parameter, so make these two functions do that. Return
	FALSE (and set the GError) if the parsing of the debug string
	failed completely. Note that g_parse_debug_string() doesn't really
	have any way to return parsing status, and accepts partially
	incorrect strings, though.

2009-01-12  Claudio Saavedra  <csaavedra@igalia.com>

	Bug 567468 – no check for trailing != NULL in
	gtk_text_layout_get_iter_at_position()

	* gtk/gtktextlayout.c: (gtk_text_layout_get_iter_at_position):
	Check for trailing to be non-NULL.